--- a/index.html
+++ b/index.html
@@ -2,61 +2,132 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lavanya Gunreddi | Technical Writer Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Lavanya Gunreddi | Technical Writer & AI Strategist</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f4f4f4; color: #333; }
-    header { background: #2c3e50; color: white; padding: 2em; text-align: center; }
-    section { padding: 2em; max-width: 900px; margin: auto; }
-    h2 { color: #2c3e50; }
-    .contact, .skills, .experience, .projects { margin-bottom: 2em; }
-    ul { list-style: none; padding: 0; }
-    li { margin-bottom: 0.5em; }
-    footer { text-align: center; padding: 1em; background: #2c3e50; color: white; }
+    body {
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f9f9f9;
+      color: #333;
+    }
+    header {
+      background: #2c3e50;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+    section {
+      padding: 2rem;
+      max-width: 900px;
+      margin: auto;
+    }
+    h1, h2, h3 {
+      color: #2c3e50;
+    }
+    a {
+      color: #2980b9;
+      text-decoration: none;
+    }
+    ul {
+      padding-left: 1.2rem;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background: #ecf0f1;
+      font-size: 0.9rem;
+    }
   </style>
 </head>
 <body>
 
 <header>
   <h1>Lavanya Gunreddi</h1>
-  <p>Senior Technical Writer | Cloud Services & Networking</p>
+  <p>Technical Writer | AI Content Strategist | Cloud & Database Specialist</p>
 </header>
 
-<section class="contact">
-  <h2>Contact</h2>
-  <p>Email: <a href="mailto:lavanya.gunreddi@gmail.com">lavanya.gunreddi@gmail.com</a></p>
-  <p>Phone: (248) 275-3487</p>
-</section>
-
-<section class="about">
+<section>
   <h2>About Me</h2>
-  <p>I am an accomplished Technical Writer with over 11 years of experience in cloud services, networking, and financial software. I specialize in translating complex technical concepts into clear, user-friendly documentation and have led projects at AWS, Cisco, and SAP.</p>
+  <p>I am an accomplished Technical Writer with over 11 years of experience in cloud services, networking, and financial software. I specialize in translating complex technical concepts into clear, user-friendly documentation. I've led documentation projects at AWS, Cisco, SAP, and more—delivering API references, UI content, and release notes that improve usability and customer experience.</p>
 </section>
 
-<section class="skills">
-  <h2>Skills</h2>
+<section>
+  <h2>Core Competencies</h2>
   <ul>
-    <li><strong>Operating Systems:</strong> Windows, Mac OS, Ubuntu, Linux</li>
-    <li><strong>Version Control:</strong> Git, GitHub, GitLab, Perforce</li>
-    <li><strong>Languages:</strong> HTML, XML, DITA, JavaScript, Java, JSP, EJB</li>
-    <li><strong>Tools:</strong> FrameMaker, MadCap Flare, Oxygen XML, RoboHelp, Zendesk</li>
-    <li><strong>AWS:</strong> EC2, S3, RDS, Aurora, IAM</li>
+    <li>Cloud Services: AWS EC2, S3, RDS, Aurora, IAM</li>
+    <li>Version Control: Git, GitHub, GitLab, Perforce</li>
+    <li>Languages: HTML, XML, DITA, JavaScript, JSP, EJB</li>
+    <li>Tools: FrameMaker, MadCap Flare, Oxygen XML, Zendesk, Epic Editor</li>
+    <li>CI/CD & Deployment: Cloud development environments, dynamic help panels</li>
   </ul>
 </section>
 
-<section class="experience">
+<section>
   <h2>Experience</h2>
+
+  <h3>Amazon Web Services (AWS)</h3>
+  <p><em>Technical Writer – Aurora & RDS (2022–Present)</em></p>
   <ul>
-    <li><strong>AWS (2022–Present):</strong> Lead writer for Aurora and RDS PostgreSQL. Applied AI tools to streamline documentation and improve customer experience.</li>
-    <li><strong>Imagine Learning:</strong> Sole owner of product-agnostic articles. Published content via Zendesk and created release notes in Confluence.</li>
-    <li><strong>Cisco:</strong> Lead writer for Prime Provisioning. Implemented DITA standards and created video tutorials.</li>
-    <li><strong>SAP Labs:</strong> Developed embedded guidance and instructional videos. Authored manuals using EPIC editor.</li>
-    <li><strong>Shinsei Bank:</strong> Authored documentation for Orbi Invest and Lending. Improved FCYMF interface and received Spot Excellence award.</li>
+    <li>Lead writer for Amazon Aurora PostgreSQL and Amazon RDS PostgreSQL.</li>
+    <li>Contributed to Oracle Database@AWS documentation during private preview.</li>
+    <li>Applied AI tools and prompt engineering to streamline content creation and feature analysis.</li>
+    <li>Improved customer experience through usability research and multimedia enhancements.</li>
+    <li>Resolved high-volume customer inquiries and collaborated with support teams to reduce ticket response time.</li>
   </ul>
+
+  <h3>Imagine Learning</h3>
+  <p><em>Senior Technical Writer (Contract, Bard)</em></p>
+  <ul>
+    <li>Created product-agnostic articles for multiple Imagine Learning platforms.</li>
+    <li>Published content using Zendesk and documented weekly releases in Confluence.</li>
+    <li>Identified documentation gaps and created epics and Jira stories to address them.</li>
+    <li>Built a glossary for Cosmos to clarify terminology across stakeholders.</li>
+  </ul>
+
+  <h3>Cisco Systems (via Tech Mahindra)</h3>
+  <p><em>Lead Technical Writer – Cisco Prime Provisioning (2012–2017)</em></p>
+  <ul>
+    <li>Managed all documentation for Prime Provisioning and implemented DITA standards.</li>
+    <li>Created admin guides, CLI references, and integration developer docs.</li>
+    <li>Performed functional and regression testing; contributed to QA and UAT efforts.</li>
+    <li>Received Tech Mahindra’s Pat on the Back award for excellence in documentation.</li>
+  </ul>
+
+  <h3>SAP Labs (via Talent Pro)</h3>
+  <p><em>Information Developer – SAP Business Process Blueprinting (2010–2012)</em></p>
+  <ul>
+    <li>Developed technical documentation based on SME input and functional specs.</li>
+    <li>Implemented embedded guidance via tooltips and UI messages.</li>
+    <li>Created developer guides, release notes, and instructional video tutorials.</li>
+    <li>Improved documentation quality through customer interviews and UI feedback.</li>
+  </ul>
+
+  <h3>Shinsei Bank, Japan (via Polaris)</h3>
+  <p><em>Associate Consultant – Orbi Invest & Lending (2006–2008)</em></p>
+  <ul>
+    <li>Authored user guides, developer manuals, and installation documentation for securities platforms.</li>
+    <li>Managed project maintenance, bug tracking, and enhancements.</li>
+    <li>Used ClearCase for version control and received Spot Excellence award for UI improvements.</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Education</h2>
+  <p><strong>Bachelor of Engineering in Computer Science</strong><br/>
+     R.M.K. Engineering College, Anna University</p>
+</section>
+
+<section>
+  <h2>Contact</h2>
+  <p>Email: <a href="mailto:lavanya.gunreddi@gmail.com">lavanya.gunreddi@gmail.com</a><br/>
+     LinkedIn: <a href="https://www.linkedin.com/in/lavanya">linkedin.com/in/lavanya</a></p>
 </section>
 
 <footer>
-  <p>© 2025 Lavanya Gunreddi</p>
+  &copy; 2025 Lavanya Gunreddi. All rights reserved.
 </footer>
 
 </body>
