--- a/index.html
+++ b/index.html
@@ -3,42 +3,60 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Lavanya Gunreddi | Technical Writer & AI Strategist</title>
+  <title>Lavanya Gunreddi | Technical Writer</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
     body {
       font-family: 'Inter', sans-serif;
       margin: 0;
       padding: 0;
-      background: #f9f9f9;
+      background: #fff;
       color: #333;
+      line-height: 1.6;
     }
     header {
-      background: #2c3e50;
-      color: white;
-      padding: 2rem;
+      padding: 4rem 2rem 2rem;
       text-align: center;
+      background: #f4f4f4;
     }
-    section {
-      padding: 2rem;
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+    }
+    header p {
+      font-size: 1.2rem;
+      color: #666;
+    }
+    main {
       max-width: 900px;
       margin: auto;
+      padding: 2rem;
     }
-    h1, h2, h3 {
+    section {
+      margin-bottom: 3rem;
+    }
+    h2 {
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
       color: #2c3e50;
     }
-    a {
-      color: #2980b9;
-      text-decoration: none;
+    h3 {
+      margin-top: 1.5rem;
+      color: #444;
     }
     ul {
       padding-left: 1.2rem;
     }
+    a {
+      color: #007acc;
+      text-decoration: none;
+    }
     footer {
       text-align: center;
-      padding: 1rem;
-      background: #ecf0f1;
+      padding: 2rem;
       font-size: 0.9rem;
+      color: #888;
+      background: #f4f4f4;
     }
   </style>
 </head>
@@ -46,88 +64,104 @@
 
 <header>
   <h1>Lavanya Gunreddi</h1>
-  <p>Technical Writer | AI Content Strategist | Cloud & Database Specialist</p>
+  <p>Technical Writer | AI Strategist | Cloud & Database Specialist</p>
 </header>
 
-<section>
-  <h2>About Me</h2>
-  <p>I am an accomplished Technical Writer with over 11 years of experience in cloud services, networking, and financial software. I specialize in translating complex technical concepts into clear, user-friendly documentation. I've led documentation projects at AWS, Cisco, SAP, and more—delivering API references, UI content, and release notes that improve usability and customer experience.</p>
-</section>
+<main>
+  <section id="intro">
+    <h2>Clarity through content</h2>
+    <p>I build developer-facing documentation and content systems that turn complexity into clarity—API guides, tutorials, and AI-assisted workflows that improve usability and reduce support load. At AWS, Cisco, and SAP, I’ve led projects that blend technical precision with user empathy.</p>
+  </section>
 
-<section>
-  <h2>Core Competencies</h2>
-  <ul>
-    <li>Cloud Services: AWS EC2, S3, RDS, Aurora, IAM</li>
-    <li>Version Control: Git, GitHub, GitLab, Perforce</li>
-    <li>Languages: HTML, XML, DITA, JavaScript, JSP, EJB</li>
-    <li>Tools: FrameMaker, MadCap Flare, Oxygen XML, Zendesk, Epic Editor</li>
-    <li>CI/CD & Deployment: Cloud development environments, dynamic help panels</li>
-  </ul>
-</section>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I’m a documentation leader with 11+ years of experience in cloud services, networking, and financial software. I specialize in translating complex systems into clear, scalable content. My work spans structured authoring, docs-as-code pipelines, and prompt engineering for AI-powered workflows. I care deeply about editorial quality, accessibility, and mentoring writers to grow with evolving tools and standards.</p>
+  </section>
 
-<section>
-  <h2>Experience</h2>
+  <section id="experience">
+    <h2>Work Experience</h2>
 
-  <h3>Amazon Web Services (AWS)</h3>
-  <p><em>Technical Writer – Aurora & RDS (2022–Present)</em></p>
-  <ul>
-    <li>Lead writer for Amazon Aurora PostgreSQL and Amazon RDS PostgreSQL.</li>
-    <li>Contributed to Oracle Database@AWS documentation during private preview.</li>
-    <li>Applied AI tools and prompt engineering to streamline content creation and feature analysis.</li>
-    <li>Improved customer experience through usability research and multimedia enhancements.</li>
-    <li>Resolved high-volume customer inquiries and collaborated with support teams to reduce ticket response time.</li>
-  </ul>
+    <h3>Amazon Web Services (AWS) – Technical Writer</h3>
+    <p><em>2022–Present</em></p>
+    <ul>
+      <li>Lead writer for Aurora and RDS PostgreSQL services.</li>
+      <li>Contributed to Oracle Database@AWS documentation.</li>
+      <li>Applied AI tools and prompt engineering to accelerate content creation and improve clarity.</li>
+      <li>Improved customer experience through usability research and multimedia enhancements.</li>
+    </ul>
 
-  <h3>Imagine Learning</h3>
-  <p><em>Senior Technical Writer (Contract, Bard)</em></p>
-  <ul>
-    <li>Created product-agnostic articles for multiple Imagine Learning platforms.</li>
-    <li>Published content using Zendesk and documented weekly releases in Confluence.</li>
-    <li>Identified documentation gaps and created epics and Jira stories to address them.</li>
-    <li>Built a glossary for Cosmos to clarify terminology across stakeholders.</li>
-  </ul>
+    <h3>Imagine Learning – Senior Technical Writer (Contract)</h3>
+    <ul>
+      <li>Created product-agnostic knowledge base articles using Zendesk.</li>
+      <li>Documented weekly releases and built glossaries for internal tools.</li>
+    </ul>
 
-  <h3>Cisco Systems (via Tech Mahindra)</h3>
-  <p><em>Lead Technical Writer – Cisco Prime Provisioning (2012–2017)</em></p>
-  <ul>
-    <li>Managed all documentation for Prime Provisioning and implemented DITA standards.</li>
-    <li>Created admin guides, CLI references, and integration developer docs.</li>
-    <li>Performed functional and regression testing; contributed to QA and UAT efforts.</li>
-    <li>Received Tech Mahindra’s Pat on the Back award for excellence in documentation.</li>
-  </ul>
+    <h3>Cisco – Lead Technical Writer (via Tech Mahindra)</h3>
+    <p><em>2012–2017</em></p>
+    <ul>
+      <li>Managed documentation for Cisco Prime Provisioning.</li>
+      <li>Implemented DITA standards and created admin, CLI, and integration guides.</li>
+      <li>Received Tech Mahindra’s Pat on the Back award for excellence.</li>
+    </ul>
 
-  <h3>SAP Labs (via Talent Pro)</h3>
-  <p><em>Information Developer – SAP Business Process Blueprinting (2010–2012)</em></p>
-  <ul>
-    <li>Developed technical documentation based on SME input and functional specs.</li>
-    <li>Implemented embedded guidance via tooltips and UI messages.</li>
-    <li>Created developer guides, release notes, and instructional video tutorials.</li>
-    <li>Improved documentation quality through customer interviews and UI feedback.</li>
-  </ul>
+    <h3>SAP Labs – Information Developer (via Talent Pro)</h3>
+    <p><em>2010–2012</em></p>
+    <ul>
+      <li>Developed embedded UI guidance and technical manuals for SAP Blueprinting.</li>
+      <li>Created video tutorials and conducted customer interviews for feedback.</li>
+    </ul>
 
-  <h3>Shinsei Bank, Japan (via Polaris)</h3>
-  <p><em>Associate Consultant – Orbi Invest & Lending (2006–2008)</em></p>
-  <ul>
-    <li>Authored user guides, developer manuals, and installation documentation for securities platforms.</li>
-    <li>Managed project maintenance, bug tracking, and enhancements.</li>
-    <li>Used ClearCase for version control and received Spot Excellence award for UI improvements.</li>
-  </ul>
-</section>
+    <h3>Shinsei Bank, Japan – Associate Consultant (via Polaris)</h3>
+    <p><em>2006–2008</em></p>
+    <ul>
+      <li>Authored documentation for Orbi Invest and Lending platforms.</li>
+      <li>Received Spot Excellence award for UI improvements and user experience.</li>
+    </ul>
+  </section>
 
-<section>
-  <h2>Education</h2>
-  <p><strong>Bachelor of Engineering in Computer Science</strong><br/>
-     R.M.K. Engineering College, Anna University</p>
-</section>
+  <section id="featured-docs">
+    <h2>Featured Documentation</h2>
+    <p>Since day one at AWS, I've been working on RDS and Aurora PostgreSQL engines. I've authored various user-facing documentation, including release notes, console screen reviews, and API references. Here are a few samples:</p>
 
-<section>
-  <h2>Contact</h2>
-  <p>Email: <a href="mailto:lavanya.gunreddi@gmail.com">lavanya.gunreddi@gmail.com</a><br/>
-     LinkedIn: <a href="https://www.linkedin.com/in/lavanya">linkedin.com/in/lavanya</a></p>
-</section>
+    <h3>Aurora PostgreSQL</h3>
+    <ul>
+      <li><a href="https://docs.aws.amazon.com/AmazonRDS/latest/AuroraUserGuide/Appendix.PostgreSQL.CommonDBATasks.TOAST_OID.html" target="_blank">TOAST OID Handling</a></li>
+      <li><a href="https://docs.aws.amazon.com/AmazonRDS/latest/AuroraUserGuide/babelfish-query-performance.html" target="_blank">Babelfish Query Performance</a></li>
+    </ul>
+
+    <h3>RDS PostgreSQL</h3>
+    <ul>
+      <li><a href="https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/USER_PostgreSQL.optimizedreads.html" target="_blank">Optimized Reads</a></li>
+      <li><a href="https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/PostgreSQL.Concepts.General.FeatureSupport.LogicalReplication.html" target="_blank">Logical Replication Support</a></li>
+    </ul>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>Cloud: AWS EC2, S3, RDS, Aurora, IAM</li>
+      <li>Languages: HTML, XML, DITA, JavaScript, JSP</li>
+      <li>Tools: FrameMaker, MadCap Flare, Oxygen XML, Zendesk, GitHub</li>
+      <li>Version Control: Git, GitHub, GitLab, Perforce</li>
+      <li>AI & Prompt Engineering: Applied GenAI tools for documentation workflows</li>
+    </ul>
+  </section>
+
+  <section id="education">
+    <h2>Education</h2>
+    <p><strong>Bachelor of Engineering in Computer Science</strong><br/>
+    R.M.K. Engineering College, Anna University</p>
+  </section>
+
+  <section id="contact">
+    <h2>Let’s Connect</h2>
+    <p>Email: <a href="mailto:lavanya.gunreddi@gmail.com">lavanya.gunreddi@gmail.com</a><br/>
+       LinkedIn: <a href="https://www.linkedin.com/in/lavanya">linkedin.com/in/lavanya</a></p>
+  </section>
+</main>
 
 <footer>
-  &copy; 2025 Lavanya Gunreddi. All rights reserved.
+  &copy; 2025 Lavanya Gunreddi. Crafted with clarity.
 </footer>
 
 </body>
