--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 <header>
   <h1>Lavanya Gunreddi</h1>
-  <p>Technical Writer | AI Strategist | Cloud & Database Specialist</p>
+  <p>Senior Technical Writer | PostgreSQL Documentation Specialist | Cloud Services Writer | AI-Driven Content Architect</p>
 </header>
 
 <main>
@@ -186,7 +186,7 @@
   <section id="contact">
     <h2>Let’s Connect</h2>
     <p>Email: <a href="mailto:lavanya.gunreddi@gmail.com">lavanya.gunreddi@gmail.com</a><br/>
-       LinkedIn: <a href="https://www.linkedin.com/in/lavanya">linkedin.com/in/lavanya</a></p>
+       LinkedIn: <a href="www.linkedin.com/in/lavanya-gunreddi-22403729">linkedin.com/in/lavanya</a></p>
   </section>
 </main>
 
@@ -196,3 +196,4 @@
 
 </body>
 </html>
+
