--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Lavanya Gunreddi | Technical Writer</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   <style>
     html {
       scroll-behavior: smooth;
@@ -16,6 +17,20 @@
       background: #fff;
       color: #333;
       line-height: 1.6;
+    }
+    .contact-bar {
+      text-align: center;
+      padding: 1rem;
+      background: #f9f9f9;
+      font-size: 1rem;
+    }
+    .contact-bar a {
+      margin: 0 1rem;
+      color: #333;
+      text-decoration: none;
+    }
+    .contact-bar a:hover {
+      color: #007acc;
     }
     nav {
       background: #2c3e50;
@@ -82,6 +97,11 @@
 </head>
 <body>
 
+<div class="contact-bar">
+  <a href="mailto:lavanya.gunreddi@gmail.com"><i class="fas fa-envelope"></i> lavanya.gunreddi@gmail.com</a>
+  <a href="https://www.linkedin.com/in/lavanya-gunreddi-22403729/" target="_blank"><i class="fab fa-linkedin"></i></a>
+</div>
+
 <nav>
   <a href="#intro">Intro</a>
   <a href="#about">About</a>
@@ -94,13 +114,13 @@
 
 <header>
   <h1>Lavanya Gunreddi</h1>
-  <p>Senior Technical Writer | PostgreSQL Documentation Specialist | Cloud Services Writer | AI-Driven Content Architect</p>
+  <p>Technical Writer | PostgreSQL Docs Specialist | Cloud & AI Content Strategist</p>
 </header>
 
 <main>
   <section id="intro">
-    <h2>Documentation that connects</h2>
-    <p>I create content that bridges technical depth with user clarity. Whether it’s cloud infrastructure, database engines, or financial platforms, I bring precision, empathy, and structure to every document. My work spans release notes, API references, UI copy, and AI-enhanced workflows that improve usability and reduce support load.</p>
+    <h2>Writing that makes technology approachable</h2>
+    <p>My work transforms complex systems into clear, actionable content for developers, engineers, and decision-makers. Whether it's cloud databases, API references, or AI-enhanced workflows, I focus on creating documentation that informs, empowers, and scales with the product. Every page I write is designed to reduce friction, improve usability, and build trust with users.</p>
   </section>
 
   <section id="about">
@@ -185,15 +205,4 @@
 
   <section id="contact">
     <h2>Let’s Connect</h2>
-    <p>Email: <a href="mailto:lavanya.gunreddi@gmail.com">lavanya.gunreddi@gmail.com</a><br/>
-       LinkedIn: <a href="www.linkedin.com/in/lavanya-gunreddi-22403729">linkedin.com/in/lavanya</a></p>
-  </section>
-</main>
-
-<footer>
-  &copy; 2025 Lavanya Gunreddi. Crafted with clarity.
-</footer>
-
-</body>
-</html>
-
+    <p
