--- a/index.html
+++ b/index.html
@@ -18,20 +18,6 @@
       color: #333;
       line-height: 1.6;
     }
-    .contact-bar {
-      text-align: center;
-      padding: 1rem;
-      background: #f9f9f9;
-      font-size: 1rem;
-    }
-    .contact-bar a {
-      margin: 0 1rem;
-      color: #333;
-      text-decoration: none;
-    }
-    .contact-bar a:hover {
-      color: #007acc;
-    }
     nav {
       background: #2c3e50;
       padding: 1rem;
@@ -61,6 +47,18 @@
     header p {
       font-size: 1.2rem;
       color: #666;
+    }
+    .icon-links {
+      margin-top: 1rem;
+    }
+    .icon-links a {
+      margin: 0 1rem;
+      font-size: 1.5rem;
+      color: #333;
+      text-decoration: none;
+    }
+    .icon-links a:hover {
+      color: #007acc;
     }
     main {
       max-width: 900px;
@@ -97,11 +95,6 @@
 </head>
 <body>
 
-<div class="contact-bar">
-  <a href="mailto:lavanya.gunreddi@gmail.com"><i class="fas fa-envelope"></i> lavanya.gunreddi@gmail.com</a>
-  <a href="https://www.linkedin.com/in/lavanya-gunreddi-22403729/" target="_blank"><i class="fab fa-linkedin"></i></a>
-</div>
-
 <nav>
   <a href="#intro">Intro</a>
   <a href="#about">About</a>
@@ -109,12 +102,15 @@
   <a href="#samples">Recent Work</a>
   <a href="#skills">Skills</a>
   <a href="#education">Education</a>
-  <a href="#contact">Contact</a>
 </nav>
 
 <header>
   <h1>Lavanya Gunreddi</h1>
   <p>Technical Writer | PostgreSQL Docs Specialist | Cloud & AI Content Strategist</p>
+  <div class="icon-links">
+    <a href="mailto:lavanya.gunreddi@gmail.com"><i class="fas fa-envelope"></i></a>
+    <a href="https://www.linkedin.com/in/lavanya-gunreddi-22403729/" target="_blank"><i class="fab fa-linkedin"></i></a>
+  </div>
 </header>
 
 <main>
@@ -202,6 +198,12 @@
     <p><strong>Bachelor of Engineering in Computer Science</strong><br/>
     R.M.K. Engineering College, Anna University</p>
   </section>
+</main>
 
-  <section id="contact">
-    <h2
+<footer>
+  &copy; 2025 Lavanya Gunreddi. Crafted with clarity.
+</footer>
+
+</body>
+</html>
+  
