--- a/index.html
+++ b/index.html
@@ -107,10 +107,6 @@
 <header>
   <h1>Lavanya Gunreddi</h1>
   <p>Technical Writer | PostgreSQL Docs Specialist | Cloud & AI Content Strategist</p>
-  <div class="icon-links">
-    <a href="mailto:lavanya.gunreddi@gmail.com"><i class="fas fa-envelope"></i></a>
-    <a href="https://www.linkedin.com/in/lavanya-gunreddi-22403729/" target="_blank"><i class="fab fa-linkedin"></i></a>
-  </div>
 </header>
 
 <main>
@@ -120,7 +116,15 @@
   </section>
 
   <section id="about">
-    <h2>About Me</h2>
+    <h2>
+      About Me
+      <a href="mailto:lavanya.gunreddi@gmail.com" style="margin-left: 0.5rem; font-size: 1.2rem; color: #333;">
+        <i class="fas fa-envelope"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/lavanya-gunreddi-22403729/" target="_blank" style="margin-left: 0.5rem; font-size: 1.2rem; color: #007acc;">
+        <i class="fab fa-linkedin"></i>
+      </a>
+    </h2>
     <p>With over a decade of experience in technical writing, I’ve contributed to global teams at AWS, Cisco, SAP, and Imagine Learning. I specialize in cloud services, networking, and enterprise software, and I’ve recently expanded into prompt engineering and AI-powered documentation strategies. I thrive on collaboration, clarity, and continuous learning.</p>
   </section>
 
@@ -201,9 +205,4 @@
 </main>
 
 <footer>
-  &copy; 2025 Lavanya Gunreddi. Crafted with clarity.
-</footer>
-
-</body>
-</html>
-  
+  &copy; 2025 Lavanya Gunredd
