--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
 
 <header>
   <h1>Lavanya Gunreddi</h1>
+  <a href="https://www.linkedin.com/in/lavanya-gunreddi-22403729/" target="_blank" style="margin-left: 0.5rem; font-size: 1.2rem; color: #007acc;">
+        <i class="fab fa-linkedin"></i>
+      </a>
   <p>Technical Writer | PostgreSQL Docs Specialist | Cloud & AI Content Strategist</p>
 </header>
 
@@ -203,4 +206,5 @@
 
 <footer>
   &copy; 2025 Lavanya Gunredd
+
 
