--- a/index.html
+++ b/index.html
@@ -105,11 +105,10 @@
 </nav>
 
 <header>
-  <h1>Lavanya Gunreddi</h1>
-  <a href="https://www.linkedin.com/in/lavanya-gunreddi-22403729/" target="_blank" style="margin-left: 0.5rem; font-size: 1.2rem; color: #007acc;">
+  <h1>Lavanya Gunreddi <a href="https://www.linkedin.com/in/lavanya-gunreddi-22403729/" target="_blank" style="margin-left: 0.5rem; font-size: 1.2rem; color: #007acc;">
         <i class="fab fa-linkedin"></i>
-      </a>
-  <p>Technical Writer | PostgreSQL Docs Specialist | Cloud & AI Content Strategist</p>
+      </a></h1>  
+  <p>Technical Writer | PostgreSQL Docs Specialist | Cloud & AI Content Strategist</p>  
 </header>
 
 <main>
@@ -120,10 +119,7 @@
 
   <section id="about">
     <h2>
-      About Me      
-      <a href="https://www.linkedin.com/in/lavanya-gunreddi-22403729/" target="_blank" style="margin-left: 0.5rem; font-size: 1.2rem; color: #007acc;">
-        <i class="fab fa-linkedin"></i>
-      </a>
+      About Me            
     </h2>
     <p>With over a decade of experience in technical writing, I’ve contributed to global teams at AWS, Cisco, SAP, and Imagine Learning. I specialize in cloud services, networking, and enterprise software, and I’ve recently expanded into prompt engineering and AI-powered documentation strategies. I thrive on collaboration, clarity, and continuous learning.</p>
   </section>
@@ -206,5 +202,6 @@
 
 <footer>
   &copy; 2025 Lavanya Gunredd
+
 
 
