--- a/index.html
+++ b/index.html
@@ -104,10 +104,13 @@
   <a href="#education">Education</a>
 </nav>
 
-<header>
-  <h1>Lavanya Gunreddi <a href="https://www.linkedin.com/in/lavanya-gunreddi-22403729/" target="_blank" style="margin-left: 0.5rem; font-size: 1.2rem; color: #007acc;">
-        <i class="fab fa-linkedin"></i>
-      </a></h1>  
+<header> 
+  <h1>
+  Lavanya Gunreddi
+  <a href="https://www.linkedin.com/in/lavanya-gunreddi-22403729/" target="_blank" style="margin-left: 0.5rem; font-size: 1.2rem; color: #007acc;">
+    <i class="fab fa-linkedin"></i>
+  </a>
+</h1>
   <p>Technical Writer | PostgreSQL Docs Specialist | Cloud & AI Content Strategist</p>  
 </header>
 
@@ -202,6 +205,7 @@
 
 <footer>
   &copy; 2025 Lavanya Gunredd
+
 
 
 
