--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <i class="fab fa-linkedin"></i>
   </a>
 </h1>
-  <p>Technical Writer | PostgreSQL Docs Specialist | Cloud & AI Content Strategist</p>  
+  <p>Senior Technical Writer | PostgreSQL Docs Specialist | Cloud & AI Content Strategist</p>  
 </header>
 
 <main>
@@ -205,6 +205,7 @@
 
 <footer>
   &copy; 2025 Lavanya Gunredd
+
 
 
 
