--- a/index.html
+++ b/index.html
@@ -119,24 +119,25 @@
   </section>
 
   <section id="experience">
-    <h2>Experience</h2>
+  <h2>Experience</h2>
 
-    <h3>Amazon Web Services (AWS) – Technical Writer</h3>
-    <p><em>2022–Present</em></p>
-    <p>As the lead writer for Aurora and RDS PostgreSQL engines, I authored and maintained core documentation that supports developers and DBAs. I contributed to the Oracle Database@AWS launch during its private preview phase, collaborating closely with engineering teams. I integrated AI tools and prompt engineering into our workflows to accelerate content creation and improve clarity. My work also included usability research and multimedia content to enhance the customer experience.</p>
+  <h3>Amazon Web Services (AWS) – Technical Writer</h3>
+  <p><em>2022–Present</em></p>
+  <p>At AWS, I serve as the lead writer for Amazon Aurora PostgreSQL and Amazon RDS PostgreSQL engines. I own end-to-end documentation for major features like optimized reads, logical replication, and Babelfish query performance. I collaborated on the Oracle Database@AWS launch during its private preview, working closely with engineering and product teams to shape early content. I’ve integrated GenAI tools and prompt engineering into our writing workflows to accelerate delivery and improve clarity. My work includes usability testing, customer feedback analysis, and multimedia content creation to enhance developer experience.</p>
 
-    <h3>Imagine Learning – Senior Technical Writer (Contract)</h3>
-    <p>I created reusable knowledge base articles across multiple products and documented weekly releases. I built glossaries for internal tools and published content using Zendesk, working closely with developers and product managers to ensure accuracy and consistency.</p>
+  <h3>Imagine Learning – Senior Technical Writer (Contract)</h3>
+  <p>I created scalable, reusable knowledge base articles across multiple K–12 education platforms. I documented weekly release notes, built internal glossaries, and streamlined content for support teams. I published articles using Zendesk and collaborated with developers, QA, and PMs to ensure accuracy and alignment with user needs. My work helped reduce support ticket volume and improve onboarding for educators and administrators.</p>
 
-    <h3>Cisco – Lead Technical Writer (via Tech Mahindra)</h3>
-    <p>I managed documentation for Cisco Prime Provisioning, implemented DITA standards, and authored admin, CLI, and integration guides. I also contributed to QA efforts and created video tutorials to support internal teams.</p>
+  <h3>Cisco – Lead Technical Writer (via Tech Mahindra)</h3>
+  <p>At Cisco, I led documentation for Cisco Prime Provisioning, a network automation platform. I authored admin guides, CLI references, and integration manuals using DITA XML and FrameMaker. I worked closely with QA and engineering to validate features and troubleshoot issues. I also created internal video tutorials and contributed to UI/UX improvements by providing feedback on workflows and terminology. My documentation supported global telecom clients and reduced onboarding time for new deployments.</p>
 
-    <h3>SAP Labs – Information Developer (via Talent Pro)</h3>
-    <p>I developed embedded UI guidance and technical manuals for SAP Blueprinting. My work included developer guides, release notes, and instructional videos. I conducted user interviews to gather feedback and improve documentation quality.</p>
+  <h3>SAP Labs – Information Developer (via Talent Pro)</h3>
+  <p>I developed embedded UI guidance and technical manuals for SAP Blueprinting tools. I authored developer guides, release notes, and instructional videos for internal and external users. I conducted user interviews to gather feedback and enhance the quality of our documentation. I collaborated with product managers and UX designers to align content with evolving feature sets and user expectations.</p>
 
-    <h3>Shinsei Bank, Japan – Associate Consultant (via Polaris)</h3>
-    <p>I authored documentation for Orbi Invest and Lending platforms, improved UI and user experience, and earned a Spot Excellence award. I also managed version control and project maintenance using ClearCase.</p>
-  </section>
+  <h3>Shinsei Bank, Japan – Associate Consultant (via Polaris)</h3>
+  <p>At Shinsei Bank, I documented financial platforms, including Orbi Invest and Lending. I improved UI workflows and user experience, earning a Spot Excellence award for my contributions. I managed version control using ClearCase and maintained project documentation across multiple releases. I worked in a bilingual environment, translating technical concepts for cross-functional teams and ensuring compliance with Japanese banking standards.</p>
+</section>
+
 
   <section id="samples">
     <h2>Recent Work Samples</h2>
@@ -173,3 +174,4 @@
 
 </body>
 </html>
+
